<resources>
    <string name="app_name">Santa Spotter</string>
    <string name="powered_by">Powered by</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="background">Background</string>
    <string name="share">Share</string>

    <string name="brightness">Brightness</string>
    <string name="temperature">Temperature</string>
    <string name="eraser">Eraser</string>

    <string name="please_enter_a_valid_code">Please enter a valid code.</string>
    <string name="santa">Santa</string>
    <string name="santa_claus_is_ncoming_to_town">Santa Claus is\ncoming to town...</string>
    <string name="now_you_can_spot_him_in_action">Now you can spot him in action!</string>
    <string name="spot_him_now">Spot Him Now!</string>
    <string name="https_www_copperfield_com">
        <u>https://www.copperfield.com</u>
    </string>
    <string name="privacy_policy">
        <u>Privacy Policy</u>
    </string>
    <string name="brought_to_your_by_copperfield_nthe_nation_s_leading_supplier_of_nchimney_and_hearth_products">Brought to your by Copperfield.\nThe Nation’s Leading Supplier of\nChimney and Hearth Products.</string>
    <string name="enter_code">Enter Code</string>
    <string name="don_t_have_a_code">Don’t have a code?</string>
    <string name="submit">Submit</string>
    <string name="instant_access_code">instant access code.</string>
    <string name="for_an">for an</string>
    <string name="santa_copperfield_com">
        <u>santa@copperfield.com</u>
    </string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="if_you_don_t_have_a_code_you_can_nunlock_all_the_stickers_by_emailing">If you don\'t have a code you can\nunlock all the stickers by emailing</string>
    <string name="classic_santa">Classic Santa</string>
    <string name="he_will_always_finish_nhis_milk_and_cookies">He will always finish\n his milk and cookies.</string>
    <string name="pick_me">Pick Me</string>
    <string name="edit_your_santa">Edit Your Santa</string>
    <string name="tap_on_your_santa_to_edit_nuse_pinch_and_drag_gestures_nto_move_scale_and_rotate">Tap on your Santa to edit.\nUse pinch and drag gestures\nto move, scale, and rotate.</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="save">Save</string>
</resources>