<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".GetStarted">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/started_constraint_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/getStarted_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/get_started_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/santa_claus_is_ncoming_to_town"
            android:textColor="@color/black"
            android:textSize="@dimen/xXLargeTextSize"
            app:layout_constraintBottom_toTopOf="@+id/text_title_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/now_you_can_spot_him_in_action"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumTextSize"
            app:layout_constraintBottom_toTopOf="@+id/button_spot_him"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_spot_him"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/spot_him_now"
            android:textColor="@color/white"
            android:textSize="@dimen/smallTextSize"
            android:padding="@dimen/_6sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/url_textView"
            app:layout_constraintStart_toStartOf="@+id/text_title_1" />

        <TextView
            android:id="@+id/url_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/https_www_copperfield_com"
            android:textColor="#FC2F48"
            android:padding="@dimen/_4sdp"
            android:textSize="@dimen/xSmallTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_spot_him" />

        <TextView
            android:id="@+id/policy_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_4sdp"
            android:text="@string/privacy_policy"
            android:textColor="#FC2F48"
            android:textSize="@dimen/smallTextSize"
            app:layout_constraintBottom_toBottomOf="@+id/url_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/url_textView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/getStarted_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:src="@drawable/santa_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>