<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_160sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/popup_dialog_background">

    <ImageView
        android:id="@+id/imageView_cross"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/title_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:src="@drawable/image_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_cross"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/if_you_don_t_have_a_code_you_can_nunlock_all_the_stickers_by_emailing"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="@+id/title_imageView"
        app:layout_constraintStart_toStartOf="@+id/title_imageView"
        app:layout_constraintTop_toBottomOf="@+id/title_imageView" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/santa_copperfield_com"
        android:textColor="@color/red_text_color"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="@+id/textView_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_description"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/for_an"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toEndOf="@+id/textView_email"
        app:layout_constraintTop_toTopOf="@+id/textView_email" />

    <TextView
        android:id="@+id/textView_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/instant_access_code"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_description1"
        app:layout_constraintStart_toStartOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_email"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>