<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_dialog_background"
    >
<!--android:background="@android:color/transparent"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView_cross"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/title_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/image_powered_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_cross"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/brought_to_your_by_copperfield_nthe_nation_s_leading_supplier_of_nchimney_and_hearth_products"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_imageView" />

        <EditText
            android:id="@+id/editText_enterCode"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumTextSize"
            app:layout_constraintEnd_toEndOf="@+id/textView_description"
            app:layout_constraintStart_toStartOf="@+id/textView_description"
            app:layout_constraintTop_toBottomOf="@+id/textView_description" />

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/dialog_view_color"
            app:layout_constraintEnd_toEndOf="@+id/editText_enterCode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_enterCode"
            app:layout_constraintTop_toBottomOf="@+id/editText_enterCode"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            app:layout_constraintBottom_toTopOf="@+id/dont_have_code_textView"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/error_message" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/mediumTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_error_24"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/please_enter_a_valid_code"
            android:textColor="@color/red_text_color"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/editText_enterCode"
            app:layout_constraintStart_toStartOf="@+id/editText_enterCode"
            app:layout_constraintTop_toBottomOf="@+id/editText_enterCode" />

        <TextView
            android:id="@+id/dont_have_code_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/don_t_have_a_code"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/mediumTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/submit_button"
            app:layout_constraintStart_toStartOf="@+id/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>